<resources>
    <string name="app_name">UzPosAndroid</string>

    <!-- navigation menu  -->

    <string name="nav_home_title">Main Page</string>
    <string name="nav_payment_history">Payment history</string>
    <string name="nav_repost">Repost</string>
    <string name="nav_warehouse">Warehouse</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_support">Support</string>


    <string name="uz_pos">UzPos</string>
    <string name="uz_pos_buttom">Enlightening Life \n Enlightening Bnagladesh</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="forget_password">forgot password ? </string>
    <string name="login">Login</string>

    <string name="uz_pos_email">techsupport@aliensoft.uz </string>
    <string name="phone_number">+9901829193637 </string>
    <string name="login_sayt">www.aliensoft.uz </string>

       <!--fragment main page -->

    <string name="Number">№</string>
    <string name="Name_text">Name</string>
    <string name="Price_text">Price</string>
    <string name="search">Search</string>
    <string name="delete_all">Удалить все</string>
    <string name="pay">PAY</string>
    <string name="Amount_text">Amount</string>
    <string name="Sum_text">Sum</string>

    <string name="path">Все категории\t/ Овощи и фрукты /\tФрукты / Персик инжир, вес</string>
    <string name="assorti_iz_suxoproduktov_lazzat">Ассорти из сухофруктов Лаззат</string>
    <string name="todo">TODO</string>



</resources>
