<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
              android:icon="@drawable/nav_icon_home"
              android:title="@string/nav_home_title"/>

        <item android:id="@+id/nav_payment_history"
              android:icon="@drawable/nav_icon_wallet"
              android:title="@string/nav_payment_history"/>

        <item android:id="@+id/nav_repost"
              android:icon="@drawable/nav_icon_assiginment"
              android:title="@string/nav_repost"/>

        <item android:id="@+id/nav_warehouse"
              android:icon="@drawable/nav_icon_warehouse"
              android:title="@string/nav_warehouse"/>

        <item android:id="@+id/nav_settings"
              android:icon="@drawable/nav_icon_settings"
              android:title="@string/nav_settings"/>

        <item android:id="@+id/nav_support"
              android:icon="@drawable/nav_icon_headset_mic"
              android:title="@string/nav_support"/>


    </group>



</menu>