<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chut_chut_gray_white">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_bordered_gray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horri"
        app:layout_constraintEnd_toStartOf="@id/guideline_verti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/_N"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6.8"
            android:gravity="center"
            android:text="@string/Number"
            android:textColor="#576271"
            android:textSize="@dimen/text_20" />

        <TextView
            android:id="@+id/Name_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/Name_text"
            android:textColor="#576271"
            android:textSize="@dimen/text_20" />

        <TextView
            android:id="@+id/Price_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:paddingStart="5dp"
            android:text="@string/Price_text"
            android:textColor="#576271"
            android:textSize="@dimen/text_20" />

        <TextView
            android:id="@+id/Amount_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="20"
            android:gravity="center"
            android:paddingStart="8dp"
            android:text="@string/Amount_text"
            android:textColor="#576271"
            android:textSize="@dimen/text_20" />

        <TextView
            android:layout_marginLeft="@dimen/margin_4"
            android:id="@+id/Sum_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/Sum_text"
            android:textColor="#576271"
            android:textSize="@dimen/text_20" />



    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_verti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horri"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horri_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_verti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horri" />

    <AutoCompleteTextView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:background="@drawable/bg_search_view"
        android:drawableEnd="@drawable/icon_search"
        android:hint="@string/search"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_verti"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:name="uz.aliensoft.uzpos.ui.warehouse.WarehousePageFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_verti"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horri_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:background="@drawable/bg_white_bordered_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_verti"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horri_bottom"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/bottom_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horri_bottom">

            <TextView
                android:id="@+id/date_of_sold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Дата продажи:"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_of_sold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="ID продажи:"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_of_sold_text" />

            <TextView
                android:id="@+id/sum_of_sold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="Промеж. итог:"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_of_sold_text" />

            <TextView
                android:id="@+id/discount_of_sold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Скидка:"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sum_of_sold_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottom_texts"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horri_bottom">

            <TextView
                android:id="@+id/date_of_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="March 15, 2019"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/id_of_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="#1234567"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_of_sold" />

            <TextView
                android:id="@+id/sum_of_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="2930.00"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_of_sold" />

            <TextView
                android:id="@+id/discount_of_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="12.9%"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sum_of_sold" />
        </LinearLayout>

        <TextView
            android:id="@+id/sum_of_sold_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:text="UZS 2930.00"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottom_information" />

        <LinearLayout

            android:layout_marginStart="59dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear_all"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_delete_button"
                android:text="@string/delete_all"
                android:textColor="#ffffff"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/btn_pay"
                app:layout_constraintEnd_toEndOf="@id/guideline_verti" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_login_button"
                android:gravity="center"
                android:text="@string/pay"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_verti" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>